--- a/client/views/partials/main.html
+++ b/client/views/partials/main.html
@@ -3,7 +3,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="content" id="content1">
-						<h2>"People will stare. Make it worth their while."</h2>
+						<h2 id="quote">"People will stare. Make it worth their while."</h2>
 						<p>HARRY WINSTON</p>
 					</div>
 				</div>
@@ -13,66 +13,38 @@
 				</div>
 				<div class="col-sm-6">
 					<div class="content" id="register">
-						<h4>Register for ....</h4>
-						<button >Register with Facebook</button>
-						<p>-</p>
-						<form class="form-horizontal">
-						  <!-- <div class="form-group">
-						    <label for="inputEmail3" class="col-sm-3 control-label">First Name</label>
-						    <div class="col-sm-9">
-						      <input type="email" class="form-control" id="inputEmail3" placeholder="First Name">
-						    </div>
+						<h4>SIGN ME UP</h4>
+						<button id="facebook" type="button" class="btn btn-primary">Register with Facebook</button>
+						<form class="input">
+						  <div class="form-group">
+						    <input class="input_border" type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
 						  </div>
 						  <div class="form-group">
-						    <label for="inputEmail3" class="col-sm-3 control-label">Last Name</label>
-						    <div class="col-sm-9">
-						      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-						    </div>
-						  </div> -->
-						  <div class="form-group">
-						    <label for="inputEmail3" class="col-sm-3 control-label">Email</label>
-						    <div class="col-sm-7">
-						      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-						    </div>
+						    <input class="input_border" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
 						  </div>
-						  <div class="form-group">
-						    <label for="inputPassword3" class="col-sm-3 control-label">Password</label>
-						    <div class="col-sm-7">
-						      <input type="password" class="form-control" id="inputPassword3" placeholder="Create a password">
-						    </div>
-						  </div>
-						  
-						  <div class="form-group">
-						    <div class="col-sm-offset-3 col-sm-7">
-						      <a href="#/review" <button type="submit" class="btn btn-default">Sign Up</button></a>
-						    </div>
-						  </div>
+						  <button type="submit" class="btn btn-default">SIGN UP NOW</button>
 						</form>
 					</div>
 				</div>
 			</div>
 			<div class="row" style="margin-top: 20px">
 				<div class="col-sm-12">
-			  		<div class="content">
-					  	<div class="row" id="slider">
+			  		<div class="content" id="slider">
+					  	<div class="row" >
+					  		<h3 class="subtitle col-sm-offset-1">Make up tutorial</h3>
 					  		<div class="col-md-1">
 					  			<
 					  		</div>
-					  		<div class="col-md-3 slide">
-					  			<a href="#/howto"><img src="./images/post1.jpg">
-					  				<p class="caption"> asdkfjaksdfj</p></a>
+					  		<div class="col-md-5">
+					  				
+					  				<p class="caption"> asdkfjaksdfj</p>
+					  				<img width="100px" src="./images/makeup.png">
+					  				<p>aksdfs</p>
+					  				<p>aksdfs</p>
+					  				<p>aksdfs</p>
 					  		</div>
-					  		<div class="col-md-3 slide">
-					  			<img src="./images/post2.jpg">
-					  		</div>
-					  		<div class="col-md-3 slide">
-					  			<img src="./images/post3.jpg">
-					  		</div>
-					  		<div class="col-md-1">
-					  			Popular posts<br>
-					  			asdjflksj asdfasdf sdff<br>
-					  			asdkfja;l<br>
-					  			asdfkl
+					  		<div class="col-md-5">
+					  			
 					  		</div>
 					  		<div class="col-md-1">
 					  			>
