--- a/client/views/partials/profile.html
+++ b/client/views/partials/profile.html
@@ -1,9 +1,10 @@
 <div class="container">
 	<div class="profile_content">
-		<h3>My make up desk</h3>
+		<h3 class="subtitle">My make up desk</h3>
 		<img src="./images/emma_stone.jpg" width="180px">
+
 		<div class="my_makeup">
-			<h4>MY MAKE UP LIST</h4>
+			<h4 class="">MY MAKE UP LIST</h4>
 			<h4>Lips</h4>
 			<div class="row">
 				<div class="col-xs-3 col-md-3">
