--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -159,6 +159,10 @@ li form {
     padding: 10px 20px;
 
     background-color: white;
+    background-image: url("./../../images/makeup_desk.jpg");
+    background-repeat: no-repeat;
+    background-position: 73px 160px;
+    background-size: 900px;
 }
 .howto_content {
     padding: 10px 20px;
@@ -283,4 +287,203 @@ h4 {
 #quote {
     height: 180px;
     overflow: scroll;
+}
+
+
+
+card-panel {
+    padding: 20px;
+    margin: .5rem 0 1rem 0;
+
+    transition: box-shadow .25s;
+
+    border-radius: 2px;
+    background-color: #fff;
+}
+
+.card {
+    position: relative;
+
+    margin: .5rem 0 1rem 0;
+    overflow: hidden;
+
+    transition: box-shadow .25s;
+
+    border: 1px solid silver;
+    border-radius: 2px;
+    background-color: #fff;
+}
+.card .card-title {
+    font-size: 24px;
+    font-weight: 300;
+
+    color: #fff;
+}
+.card .card-title.activator {
+    cursor: pointer;
+}
+.card.small,
+.card.medium,
+.card.large {
+    position: relative;
+}
+.card.small .card-image,
+.card.medium .card-image,
+.card.large .card-image {
+    overflow: hidden;
+}
+.card.small .card-content,
+.card.medium .card-content,
+.card.large .card-content {
+    overflow: hidden;
+}
+.card.small .card-action,
+.card.medium .card-action,
+.card.large .card-action {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.card.small {
+    height: 300px;
+}
+.card.small .card-image {
+    height: 150px;
+}
+.card.small .card-content {
+    height: 150px;
+}
+.card.medium {
+    height: 400px;
+}
+.card.medium .card-image {
+    height: 250px;
+}
+.card.medium .card-content {
+    height: 150px;
+}
+.card.large {
+    height: 500px;
+}
+.card.large .card-image {
+    height: 330px;
+}
+.card.large .card-content {
+    height: 170px;
+}
+.card .card-image {
+    position: relative;
+}
+.card .card-image img {
+    position: relative;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+
+    border-radius: 2px 2px 0 0;
+}
+.card .card-image .card-title {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    padding: 20px;
+}
+.card .card-content {
+    padding: 20px;
+
+    border-radius: 0 0 2px 2px;
+}
+.card .card-content p {
+    margin: 0;
+
+    color: inherit;
+}
+.card .card-content .card-title {
+    line-height: 48px;
+}
+.card .card-action {
+    padding: 20px;
+
+    border-top: 1px solid rgba(160, 160, 160, .2);
+}
+.card .card-action a {
+    margin-right: 20px;
+
+    -webkit-transition: color .3s ease;
+       -moz-transition: color .3s ease;
+        -ms-transition: color .3s ease;
+         -o-transition: color .3s ease;
+            transition: color .3s ease;
+    text-transform: uppercase;
+
+    color: #ffab40;
+}
+.card .card-action a:hover {
+    color: #ffd8a6;
+}
+.card .card-reveal {
+    position: absolute;
+    top: 100%;
+    z-index: 1;
+
+    display: none;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    overflow-y: auto;
+
+    background-color: #fff;
+}
+.card .card-reveal .card-title {
+    display: block;
+
+    cursor: pointer;
+}
+
+#triangle {
+    position: absolute;
+    top: 50px;
+    right: 30px;
+
+    width: 0;
+    height: 0;
+
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid black;
+    border-left: 10px solid transparent;
+}
+#profile_menu {
+    position: absolute;
+    top: 60px;
+    right: 0;
+
+    width: 90px;
+    height: 200px;
+
+    text-align: center;
+
+    color: white;
+    background-color: black;
+}
+#profile_menu p {
+    width: 90px;
+    height: 40px;
+    padding-top: 10px;
+    margin-bottom: 0;
+}
+#profile_menu p:hover {
+    cursor: pointer;
+
+    background-color: grey;
+}
+#profile_menu a {
+    color: white;
+}
+#profile_menu a:hover {
+    text-decoration: none;
 }
