front-end for index page and back-end for new users

--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -199,7 +199,7 @@ h4 {
     text-transform: uppercase;
 }
 #facebook {
-    margin-bottom: 20px;
+    width: 182px;
 
     color: white;
     background-color: #3b5998;
@@ -486,4 +486,42 @@ card-panel {
 }
 #profile_menu a:hover {
     text-decoration: none;
+}
+
+.black_overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1001;
+
+    display: none;
+    width: 100%;
+    height: 100%;
+
+         opacity: .80;
+    background-color: black;
+
+    filter: alpha(opacity=80);
+    -moz-opacity: .8;
+}
+
+.white_content {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    z-index: 1002;
+
+    display: none;
+    width: 50%;
+    height: 50%;
+    padding: 16px;
+    overflow: auto;
+
+    border: 16px solid orange;
+    background-color: white;
+}
+h6 {
+    margin: 5px 0;
+
+    color: black;
 }
