--- a/client/css/style.css
+++ b/client/css/style.css
@@ -18,7 +18,7 @@ body {
   font-size: 100%;
   font-family: "Lato", sans-serif;
   color: #8f9cb5;
-  background-color: #ffd88f;
+ /* background-color: #ffd88f;*/
 }
 
 a {
@@ -49,7 +49,7 @@ header {
   height: 200px;
   line-height: 200px;
   text-align: center;
-  background-color: #5e6e8d;
+  /*background-color: #5e6e8d;*/
   color: #FFF;
 }
 header h1 {
